refactor: Use Java 16+ toList() instead of Collectors